# LangChain-1.0.-Application

./: .env.example  .gitignore  README.md  pyproject.toml  wsgi.py
app/: __init__.py  config.py  extensions.py  models.py
app/auth/: __init__.py  forms.py  routes.py
app/chat/: __init__.py  agent_runtime.py  dynamic_prompting.py  routes.py  schemas.py  state.py  tools.py
app/static/: app.css
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/chat/: index.html
scripts/: dev.sh
tests/: conftest.py  test_auth.py  test_dynamic_prompt.py  test_hil_loop.py
